Mejora abstract y introducción

--- a/Plantilla_TFG_latex/secciones/01_Introduccion.tex
+++ b/Plantilla_TFG_latex/secciones/01_Introduccion.tex
@@ -1,1 +1,23 @@
 \chapter{Introducción} \label{chap:introduction}
+
+En la era actual, dominada por la digitalización y la tecnología, la habilidad de programar se ha convertido en una herramienta fundamental, no solo para aquellos que buscan una carrera en campos tecnológicos, sino también para quienes desean una comprensión más profunda de cómo las herramientas digitales funcionan. El proceso de enseñar programación a los niños, sin embargo, presenta sus propios desafíos, dada la alta complejidad del tema y la necesidad de un enfoque pedagógico adecuado.
+
+Este Trabajo de Fin de Grado (TFG) se enmarca en la respuesta a dichos desafíos a través del desarrollo de un ITS. Este sistema se diferencia de las soluciones convencionales al no limitarse a proporcionar lecciones y ejercicios estándar; en cambio, está diseñado para adaptarse de manera más personalizada a cada estudiante, evaluando su progreso a través de indicadores simples pero efectivos.
+
+El ITS utiliza la puntuación de los ejercicios realizados por el estudiante como principal indicador para adaptarse a sus necesidades. Esta puntuación, junto con otros factores como el tiempo empleado, informa al sistema sobre como guiar al estudiante en su proceso de aprendizaje. Por ejemplo, si un estudiante tiene dificultades con ciertos ejercicios, el sistema sugerirá unos ejercicios adicionales para reforzar ese concepto en particular.
+
+Por ello, podemos decir que el núcleo de este TFG se centra en:
+
+\begin{enumerate}
+    \item La importancia de la programación en la actualidad
+    \item Los desafíos asociados con la enseñanza de la programación a niños.
+    \item El diseño y desarrollo del ITS, que busca superar estos desafíos mediante un enfoque de aprendizaje adaptativo.
+    \item La metodología que emplea el sistema para guiar al estudiante en función de sus respuestas y progreso.
+    \item La visualización e integración del ITS en una página web, proporcionando una interfaz amigable y accesible para los usuarios.
+    \item Experimentación y resultados, enfocándose en la capacidad del sistema para mejorar la enseñanza de programación a niños.
+\end{enumerate}
+
+Es relevante destacar que este proyecto se ha llevado a cabo en colaboración con Codelearn S.L, una plataforma educativa centrada en la enseñanza de programación. A pesar de los logros de Codelearn, su sistema actual presenta desafíos al ser rudimentario y poco adaptativo. Esta colaboración ha surgido con la intención de ofrecer soluciones innovadoras a estos problemas, enriqueciendo la experiencia educativa de los estudiantes y permitiendo un aprendizaje más personalizado.
+
+En conclusión, este TFG busca no solo abordar los desafíos actuales asociados con la enseñanza de programación a los niños, sino también presentar una solución práctica y efectiva para entornos educativos reales.
+
