Mod. y Estado del Arte Parcial

--- a/Plantilla_TFG_latex/proyecto.tex
+++ b/Plantilla_TFG_latex/proyecto.tex
@@ -245,6 +245,7 @@ pdfproducer = {pdflatex}
 \usepackage{pdfpages}
 \usepackage{appendix}
 \usepackage{float}
+\usepackage[utf8]{inputenc}
 
 \begin{document}
 
