--- a/Plantilla_TFG_latex/secciones/01_Introduccion.tex
+++ b/Plantilla_TFG_latex/secciones/01_Introduccion.tex
@@ -1,23 +1,33 @@
 \chapter{Introducción} \label{chap:introduction}
 
-En la era actual, dominada por la digitalización y la tecnología, la habilidad de programar se ha convertido en una herramienta fundamental, no solo para aquellos que buscan una carrera en campos tecnológicos, sino también para quienes desean una comprensión más profunda de cómo las herramientas digitales funcionan. El proceso de enseñar programación a los niños, sin embargo, presenta sus propios desafíos, dada la alta complejidad del tema y la necesidad de un enfoque pedagógico adecuado.
+\section{Contexto Actual y Relevancia de la Programación}
+En el entorno contemporáneo, la digitalización ha permeado casi todos los aspectos de nuestra vida cotidiana. Desde la forma en que comunicamos hasta cómo llevamos a cabo tareas básicas, todo se ha visto transformado bajo el influjo de la tecnología. En este contexto, la programación, que antes era vista únicamente como una herramienta técnica, ahora es una habilidad fundamental del siglo XXI. Esta no solo es crucial para aquellos que aspiran a una carrera en el ámbito tecnológico, sino también para la población en general que busca comprender y aprovechar al máximo las herramientas digitales actuales. Sin embargo, la enseñanza de programación a una audiencia joven, como los niños, plantea desafíos singulares debido a la complejidad del contenido y a las particularidades pedagógicas que requiere.
 
-Este Trabajo de Fin de Grado (TFG) se enmarca en la respuesta a dichos desafíos a través del desarrollo de un ITS. Este sistema se diferencia de las soluciones convencionales al no limitarse a proporcionar lecciones y ejercicios estándar; en cambio, está diseñado para adaptarse de manera más personalizada a cada estudiante, evaluando su progreso a través de indicadores simples pero efectivos.
+\section{Motivación y Objetivo del TFG}
+Ante la creciente demanda de educación tecnológica de calidad para los más jóvenes, surge la necesidad de herramientas pedagógicas innovadoras que se adapten a este público en particular. Es en este contexto donde se sitúa el presente Trabajo de Fin de Grado (TFG). Con la ambición de ofrecer una solución didáctica adaptada, se ha desarrollado un Sistema de Tutorización Inteligente (ITS). Más allá de ofrecer lecciones y ejercicios convencionales, el ITS está diseñado para evaluar y adaptarse a las necesidades individuales de cada estudiante, usando indicadores específicos como la puntuación obtenida en la resolución de un ejercicio y el tiempo de respuesta.
 
-El ITS utiliza la puntuación de los ejercicios realizados por el estudiante como principal indicador para adaptarse a sus necesidades. Esta puntuación, junto con otros factores como el tiempo empleado, informa al sistema sobre como guiar al estudiante en su proceso de aprendizaje. Por ejemplo, si un estudiante tiene dificultades con ciertos ejercicios, el sistema sugerirá unos ejercicios adicionales para reforzar ese concepto en particular.
+\section{Enfoque}
+Este TFG adopta un enfoque multidisciplinario, combinando elementos de pedagogía, tecnología educativa y diseño de sistemas. La naturaleza del trabajo exige la interacción de varias disciplinas con tal de abordar de manera eficaz los desafíos presentados por la enseñanza de programación a niños.
 
-Por ello, podemos decir que el núcleo de este TFG se centra en:
+\subsection{Pilares del Proyecto}
+El trabajo se estructura alrededor de varios núcleos esenciales:
 
 \begin{enumerate}
-    \item La importancia de la programación en la actualidad
-    \item Los desafíos asociados con la enseñanza de la programación a niños.
-    \item El diseño y desarrollo del ITS, que busca superar estos desafíos mediante un enfoque de aprendizaje adaptativo.
-    \item La metodología que emplea el sistema para guiar al estudiante en función de sus respuestas y progreso.
-    \item La visualización e integración del ITS en una página web, proporcionando una interfaz amigable y accesible para los usuarios.
-    \item Experimentación y resultados, enfocándose en la capacidad del sistema para mejorar la enseñanza de programación a niños.
+\item Análisis del papel actual de la programación en la sociedad digital.
+\item Evaluación de los desafíos pedagógicos en la enseñanza de programación a niños.
+\item Diseño y estructura del Sistema de Tutorización Inteligente (ITS).
+\item Metodología de adaptación del ITS basada en las respuestas y progreso del estudiante.
+\item Integración del ITS en una plataforma web, enfocándose en la experiencia del usuario.
+\item Experimentación y análisis en contextos reales de enseñanza.
 \end{enumerate}
 
-Es relevante destacar que este proyecto se ha llevado a cabo en colaboración con Codelearn S.L, una plataforma educativa centrada en la enseñanza de programación. A pesar de los logros de Codelearn, su sistema actual presenta desafíos al ser rudimentario y poco adaptativo. Esta colaboración ha surgido con la intención de ofrecer soluciones innovadoras a estos problemas, enriqueciendo la experiencia educativa de los estudiantes y permitiendo un aprendizaje más personalizado.
+\subsection{Desarrollo Ágil}
+Dada la naturaleza dinámica y la necesidad de adaptabilidad del proyecto, se ha optado por emplear un desarrollo ágil para el desarrollo del software. Este enfoque permite un desarrollo iterativo e incremental, facilitando adaptaciones rápidas a los cambios y proporcionando entregas parciales que pueden ser evaluadas y mejoradas en etapas tempranas del proyecto.
 
-En conclusión, este TFG busca no solo abordar los desafíos actuales asociados con la enseñanza de programación a los niños, sino también presentar una solución práctica y efectiva para entornos educativos reales.
+Esta metodología asegura que el desarrollo sea flexible, colaborativo y orientado al usuario final, garantizando que las soluciones desarrolladas estén alineadas con las necesidades reales de enseñanza y aprendizaje.
 
+\section{Colaboración con Codelearn S.L.}
+Este proyecto no habría sido posible sin la colaboración estrecha con Codelearn S.L.  \cite{codelearn}, una destacada entidad en el mundo de la educación tecnológica para niños. A pesar de los avances y logros de Codelearn S.L., se identificó la necesidad de evolucionar y adaptar su sistema pedagógico para hacerlo más personalizado y efectivo. Esta colaboración ha permitido fusionar la experiencia y conocimientos de ambas partes, con el objetivo de desarrollar un ITS que permita mejorar la forma en que se enseña programación a niños.
+
+\section{Conclusión}
+A través de este TFG, se busca proporcionar una respuesta concreta y bien fundamentada a los desafíos actuales de la enseñanza de programación. Con un enfoque innovador y una aplicación práctica, se espera que este trabajo siente las bases para futuras investigaciones y desarrollos en el ámbito de la educación tecnológica adaptativa.
