--- a/Plantilla_TFG_latex/secciones/02_Contexto.tex
+++ b/Plantilla_TFG_latex/secciones/02_Contexto.tex
@@ -1,1 +1,68 @@
-\chapter{Contexto y Estado del arte} \label{chap:contexto-estado-arte}
+\chapter{Estado del Arte y Trabajos Relacionados} \label{chap:state_of_the_art}
+
+En este segundo capítulo tiene como objetivo presentar todo el conocimiento
+teórico adquirido en preparación para la implementación y adaptación de una
+ITS, así como el estado actual de esta tecnología.
+
+Este estudio está basado principalmente en las contribuciones presentadas en las conferencias de la \textit{International Conference on Intelligent Tutoring Systems} de los años 2016 \cite{ITS2016}, 2020 \cite{ITS2020} y 2021 \cite{ITS2021}. Estas ediciones han sido fuentes valiosas de información sobre las últimas tendencias, técnicas y avances en el campo de la tutoría inteligente. A lo largo de este capítulo, se explorará el papel de los Sistemas de Tutoría Inteligente en la educación moderna, las metodologías empleadas para adaptar el aprendizaje a las necesidades individuales de los estudiantes y las perspectivas actuales y futuras en la adaptación y personalización del aprendizaje en línea.
+
+\section{Definición de los ITS}
+
+\section{Evolución de los ITS}
+
+La idea de ser capaces de utilizar la tecnología para personalizar y mejorar la experiencia de aprendizaje no es nueva. Sin embargo, con el crecimiento exponencial de las tecnologías de la información y la computación, esta idea ha ido experimentando transformaciones radicales, dando lugar a lo que se conoce hoy en día como Sistemas de Tutorización Inteligente. A continuación, se presenta una pequeña revisión de la evolución de los ITS, trazando su desarrollo desde sus inicios hasta su estado actual.
+
+Los ITS nacieron en la década de 1970, bajo la idea de que la tecnología podía ser utilizada para simular la tutoría humana. Estos primeros sistemas, limitados por la capacidad computacional de la época, se centraban en unos conocimientos muy específicos, como podían ser la geometría o el álgebra. Utilizaban una lógica básica y simple para ofrecer retroalimentación y una guía basada en las respuestas de los estudiantes. A pesar de su simplicidad, fueron representación de un gran paso hacia la individualización del aprendizaje.
+
+Con el progreso en la investigación de la Inteligencia Artificial (IA) en la década de 1980, los ITS comenzaron a incorporar técnicas más avanzadas. Estos sistemas no solo eran capaces de evaluar las respuestas de los estudiantes, sino también de comprender parcialmente el proceso de pensamiento detrás de esas respuestas. Así, el feedback proporcionado se volvía más personalizado y adaptativo, reflejando mejor las necesidades individuales de cada alumno.
+
+La siguiente década trajo consigo una mayor comprensión de la importancia de la interacción humano-computadora en los procesos educativos. Donde se desarrollaron las ITS con unas interfaces más intuitivas y amigables para el usuario. Estos sistemas comenzaron a ofrecer unos mejores entornos de aprendizaje, incorporando multimedia, simulaciones y otros recursos interactivos. La idea era crear un entorno donde el estudiante no solo recibiera retroalimentación, sino que también pudiera explorar y aprender de una manera más autónoma.
+
+En el siglo XXI, la proliferación de \textit{Big Data} y el avance en técnicas de aprendizaje profundo permitieron que los ITS alcanzaran un nuevo nivel de sofisticación. Con la capacidad de procesar grandes cantidades de datos, estos sistemas modernos pueden detectar patrones y tendencias en el comportamiento del estudiante que antes eran invisibles. Usando esta información para predecir las necesidades de aprendizaje futuras y adaptar el contenido en tiempo real, proporcionando una experiencia de aprendizaje aún más personalizada.
+
+El potencial de los ITS sigue siendo muy amplio. Con la constante evolución de la tecnología y una comprensión cada vez más profunda de la pedagogía, es probable que veamos sistemas aún más avanzados en el futuro cercano. Incluso, se espera que la integración de realidades virtual y aumentada, junto con avances en IA, genere ITS que ofrezcan experiencias de aprendizaje inmersivas y altamente adaptativas. 
+
+\section{Aplicaciones actuales de los ITS}
+
+La relevancia actual de los ITS se extiende a una variedad de dominios y, con la evolución tecnológica, su precisión y adaptabilidad han alcanzado niveles sin precedentes. Aprovechando técnicas de aprendizaje automático, estos sistemas pueden reconocer patrones en el comportamiento del usuario y adaptarse en función de ello. A su vez, mediante el análisis semántico, comprenden de manera profunda las respuestas de los estudiantes, garantizando una retroalimentación más precisa y relevante. Además, algunos ITS modernos están incorporando Realidad Virtual y Aumentada, ofreciendo entornos de aprendizaje inmersivos que permiten interacciones novedosas y atractivas con el contenido. A continuación, exploraremos algunas de las aplicaciones más prominentes de estos sistemas en el contexto contemporáneo.
+
+\subsection{Educación K-12}
+
+Los ITS se han establecido como herramientas fundamentales para complementar el aprendizaje tradicional dentro del ámbito escolar, ya sea en la educación primaria o en la eduación secundaria. Sistemas como \textit{Dreambox} \cite{dreambox} para matemáticas o \textit{Fast Forword} \cite{fastforword} para la lectura, utilizan técnicas de tutorización inteligente para adaptar el contenido a las necesidades individuales de cada estudiante, permitiendo una educación más personalizada.
+
+\subsection{Educación Superior}
+
+Las universidades y colegios alrededor del mundo están empezando a integrar ITS en sus plataformas de aprendizaje en línea. Sobre todo, estas instituciones los han comenzado a usar para los cursos masivos en línea (MOOCs), donde el sistema se encarga de tutorizar a miles de estudiantes simultáneamente, sin una presencia física importante del profesor.
+
+Por ejemplo, el sistema \textit{edX} \cite{edx}, iniciado por Harvard y el MIT, ha integrado algoritmos de tutorización inteligente para ofrecer retroalimentación personalizada a los estudiantes en sus cursos MOOCs con más inscritos. Asimismo, la Universidad de Stanford, a través de la plataforma \textit{Coursera} \cite{coursera}, también ha experimentado con herramientas de tutorización para mejorar la retención y comprensión de los estudiantes adscritos. 
+
+\subsection{Formación y Capacitación Corporativa}
+
+El mundo empresarial también ha reconocido el valor estos sistemas para la formación continua de sus empleados. Las grandes corporaciones han comenzado a implementarlos dentro de sus programas de formación, permitiendo la identificación y corrección de carencias de habilidades en tiempo real.
+
+Grandes corporaciones como Google y Microsoft ya han comenzado a implementarlo en sus programas de formación interna. Por ejemplo, el \textit{Google's IT Support Certificate} \cite{googleitsupport}, un programa desarrollado para formar especialistas de soporte en TI, utiliza los ITS para guiar a los estudiantes a través de una serie de labores técnicas, identificando áreas de mejora en tiempo real.
+
+\subsection{Salud y Medicina}
+
+En el campo médico, también están desempeñando un papel crucial en la formación de futuros profesionales. Concretamente, \textit{Touch Surgery Simulator} \cite{touchsurgery} permite a los médicos practicar procedimientos quirúrgicos en un entorno virtual, sino que también proporciona retroalimentación detallada basada en el rendimiento y decisiones tomadas durante la simulación.
+
+\subsection{Defensa y Aviación}
+
+Es importante destacar que la aviación y la defensa han estado al frente en la adopción de simuladores con capacidades de tutorización. Un gran ejemplo es el \textit{F-35 Lightning II Training System} \cite{f35training}. Este ayuda a capacitar los pilotos de combate, proporcionando escenarios adaptativos basados en las habilidades y el progreso del piloto.
+
+\subsection{Juegos Educativos y Simuladores}
+
+Los juegos educativos, como \textit {DragonBox} \cite{dragonbox} que enseña matemáticas, o \textit {Civilization EDU} \cite{civilizationedu} que instruye sobre historia y estrategia, también integran sistemas de tutorización inteligente para adaptar el contenido y los desafíos a las habilidades del jugador, asegurando una curva de aprendizaje apropiada.
+
+
+\section{Limitaciones y Desafíos}
+
+A pesar de las prometedoras capacidades y aplicaciones de los ITS en diversos contextos educativos y de formación, estos sistemas no están exentos de limitaciones y desafíos. 
+
+La interacción con estos sistemas no logra capturar la profundidad y empatía de un tutor humano, lo que puede generar desconexión o frustración por parte del estudiante. Estos sistemas, siendo fruto de una confluencia de disciplinas muy variadas, plantean retos en su diseño y actualización, especialmente cuando se busca mantener su relevancia en campos en constante evolución.
+
+La adaptabilidad de estos sistemas también se encuentra en una línea delicada. Por ser lo suficientemente generales para diversos contextos. Asimismo, como específicos para brindar una retroalimentación precisa. Siendo este equilibrio esencial para garantizar su eficacia. Cabe destacar, que con la recopilación constante de datos del usuario, se debe tener especial delicadeza en cuanto a la privacidad y seguridad. Es imperativo que estos sistemas ofrezcan unas garantías robustas con tal de proteger la información del alumno.
+
+Por otro lado, a pesar de su potencial democratizador en el acceso a la educación, los ITS corren el riesgo de convertirse en herramientas elitistas, accesibles solo para aquellos con los medios para obtenerlos. Por ello, es crucial que se trabaje en su accesibilidad y asequibilidad. Y si bien estos sistemas ofrecen métricas de rendimiento, medir su impacto real en el aprendizaje y en la transferencia práctica del conocimiento sigue siendo un gran reto.
+
+En resumen, se podría decir que los ITS se ven como una herramienta revolucionaria, pero es fundamental enfrentar y superar los desafíos mencionados para garantizar que su implementación sea efectiva y equitativa en todos los contextos educativos.
