--- a/Plantilla_TFG_latex/proyecto.tex
+++ b/Plantilla_TFG_latex/proyecto.tex
@@ -246,6 +246,9 @@ pdfproducer = {pdflatex}
 \usepackage{appendix}
 \usepackage{float}
 \usepackage[utf8]{inputenc}
+\usepackage[nottoc,notlof,notlot]{tocbibind}
+\usepackage{rotating}
+\usepackage{microtype}
 
 \begin{document}
 
