Diagrama de Gantt

--- a/Plantilla_TFG_latex/secciones/01_Introduccion.tex
+++ b/Plantilla_TFG_latex/secciones/01_Introduccion.tex
@@ -27,7 +27,7 @@ Dada la naturaleza dinámica y la necesidad de adaptabilidad del proyecto, se ha
 Esta metodología asegura que el desarrollo sea flexible, colaborativo y orientado al usuario final, garantizando que las soluciones desarrolladas estén alineadas con las necesidades reales de enseñanza y aprendizaje.
 
 \section{Colaboración con Codelearn S.L.}
-Este proyecto no habría sido posible sin la colaboración estrecha con Codelearn S.L.  \cite{codelearn}, una destacada entidad en el mundo de la educación tecnológica para niños. A pesar de los avances y logros de Codelearn S.L., se identificó la necesidad de evolucionar y adaptar su sistema pedagógico para hacerlo más personalizado y efectivo. Esta colaboración ha permitido fusionar la experiencia y conocimientos de ambas partes, con el objetivo de desarrollar un ITS que permita mejorar la forma en que se enseña programación a niños.
+Este proyecto no habría sido posible sin la colaboración estrecha con Codelearn S.L.  \cite{codelearn}, una destacada entidad internacional de la educación tecnológica para niños. A pesar de los avances y logros de Codelearn S.L., se identificó la necesidad de evolucionar y adaptar su sistema pedagógico para hacerlo más personalizado y efectivo. Esta colaboración ha permitido fusionar la experiencia y conocimientos de ambas partes, con el objetivo de desarrollar un ITS que permita mejorar la forma en que se enseña programación a niños.
 
 \section{Conclusión}
 A través de este TFG, se busca proporcionar una respuesta concreta y bien fundamentada a los desafíos actuales de la enseñanza de programación. Con un enfoque innovador y una aplicación práctica, se espera que este trabajo siente las bases para futuras investigaciones y desarrollos en el ámbito de la educación tecnológica adaptativa.
