Finalización planificación y presupuesto

--- a/Plantilla_TFG_latex/Bibliografia/referencias.bib
+++ b/Plantilla_TFG_latex/Bibliografia/referencias.bib
@@ -117,3 +117,11 @@
     author={Cataldi, Zulma y Lage, Fernando J.},
     journal={Facultad Regional Buenos Aires Universidad Tecnológica Nacional. Facultad de Ingeniería. Universidad de Buenos Aires.},
 }
+
+@misc{seg-social,
+    title = {Cotización y Recaudación de Trabajadores para el 2021},
+    author = {Seguridad Social},
+    year = {2023},
+    howpublished = {\url{https://www.seg-social.es/wps/portal/wss/internet/Trabajadores/CotizacionRecaudacionTrabajadores/36537}},
+    note = {Accedido el: 26 de Octubre, 2023}
+}
